<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!-- The navigation drawer -->

    <LinearLayout
        android:id="@+id/drawer_wrapper"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="-38dp"
        android:background="@color/sc_dark_gray"
        android:orientation="vertical"
        android:paddingTop="40dp" >

        <TextView
            android:id="@+id/drawer_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/selectable_background_experiencebuster"
            android:drawableLeft="@drawable/ic_add_label"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/dialog_collection_add"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_labels"
            android:drawablePadding="6dp"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/mainmenu_collections"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/sc_light_gray" />

        <TextView
            android:id="@+id/drawer_uncantorized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/selectable_background_experiencebuster"
            android:padding="8dp"
            android:text="@string/uncantorized"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/drawer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:padding="8dp" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>